<resources>
    <string name="app_name">Movies</string>
    <string name="search">Search</string>
    <string name="most_popular">Most popular</string>
    <string name="playing_now">Playing now</string>
    <string name="for_adults">For adults:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qualification">Qualification</string>
    <string name="popularity">Popularity</string>
    <string name="original_language">Original language</string>
    <string name="release_date">Release date</string>
    <string name="original_title">Original title</string>
    <string name="detail">Detail</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Sorry… something went wrong. Please try again later.</string>
    <string name="accept">Accept</string>
</resources>