<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/top_bar"
        layout="@layout/include_dialog_top_bar"
        android:layout_width="80dp"
        android:layout_height="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_resource"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_baseline_error_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        style="@style/ErrorTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_resource"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/oops"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        style="@style/ErrorDescriptionDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/something_went_wrong"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>