<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movieDetail"
            type="com.ari.movies.ui.model.MovieUi" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:hide_on_touch="true"
                app:show_timeout="3000"
                app:rewind_increment="10000"
                app:fastforward_increment="10000"
                app:use_controller="true"
                android:background="@android:color/background_dark"
                app:player_layout_id="@layout/exo_simple_player_view"
                app:controller_layout_id="@layout/custom_controller"
                app:resize_mode="fixed_width"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/playerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="0dp"
                    android:layout_height="304dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/center_guideline"
                    android:layout_marginTop="16dp"
                    tools:srcCompat="@drawable/no_way_home"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    app:poster="@{movieDetail.posterPath}"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    style="@style/MovieTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/center_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="SpiderMan No way home"
                    android:text="@{movieDetail.title}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_overview"
                    style="@style/MovieOverview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    app:layout_constraintStart_toEndOf="@+id/center_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:maxLines="16"
                    tools:text="After settling in Green Hills, Sonic is eager to prove he has what it takes to be a true hero. His test comes when Dr. Robotnik returns, this time with a new partner, Knuckles, in search for an emerald that has the power to destroy civilizations. Sonic teams up with his own sidekick, Tails, and together they embark on a globe-trotting journey to find the emerald before it falls into the wrong hands."
                    android:text="@{movieDetail.overview}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_original_title"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/original_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_original_title_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Lorem Ipsum"
                android:text="@{movieDetail.originalTitle}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_qualification"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/qualification"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_qualification_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="7.7"
                app:textNumber="@{movieDetail.voteAverage}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_popularity"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_qualification"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/popularity"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_popularity_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_qualification"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="74444.1"
                app:textNumber="@{movieDetail.popularity}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_adult"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_popularity"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/for_adults"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_adult_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_popularity"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Yes"
                android:text="@{movieDetail.adult ? @string/yes : @string/no}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_language"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_adult"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/original_language"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_language_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_adult"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="EN"
                android:text="@{movieDetail.originalLanguage.toUpperCase()}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release_date"
                style="@style/MovieData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_language"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/release_date"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_release_date_result"
                style="@style/MovieDataResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                tools:text="EN"
                android:text="@{movieDetail.releaseDate}"/>


            <!--        <androidx.appcompat.widget.AppCompatTextView-->
            <!--            android:id="@+id/tv_static_for_adults"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/tv_title"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            android:text="@string/for_adults" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>